--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@ server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3308/hospital-db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
 
 spring.mvc.format.date=yyyy-MM-dd
 spring.thymeleaf.cache=false
